SK-1040: Fix background overflow (#1445)

--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -5,10 +5,11 @@
   min-height: var(--popup-height);
   height: var(--popup-height);
   max-height: var(--popup-height);
-  background: url('../images/background.png') no-repeat center/contain;
+  background: fixed url('../images/background.png') no-repeat center/contain;
   padding: 4rem 1.5rem 0;
   box-sizing: border-box;
   margin: auto;
+  overflow-y: auto;
 }
 
 .container {
